--- a/package.json
+++ b/package.json
@@ -3,11 +3,10 @@
   "type": "module",
   "private": true,
   "scripts": {
-    
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
-    "preview": "nuxt preview",
+    "preview": "nuxt preview"
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
